Putting all this here for now

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,11 @@
 <a href="/solutions/digital-supply-chain-data-protection.html"></a>
 <a href="/solutions/data-loss-prevention.html"></a>
 <a href="/solutions/iot-data-protection.html"></a>
+<a href="/products/e2e-encryption-sdks.html"></a>
+<a href="/products/e2e-encryption-cli.html"></a>
+<a href="/products/e2e-encryption-s3.html"></a>
+<a href="/products/data-access-tracing.html"></a>
+<a href="/products/BYOK-customer-owned-keys.html"></a>
 <a href="engineers.html"></a>
 <a href="media.html"></a>
 <a href="pricing.html"></a>
