--- a/src/navigation.html
+++ b/src/navigation.html
@@ -128,7 +128,7 @@
                     <div class="dropdown cursor-pointer relative">
                         <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
                         <button class="engineers_button text-gray-500 group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" aria-expanded="true">
-                            <span>Engineers</span>
+                            <span>Products</span>
                             <!--
                               Heroicon name: solid/chevron-down
 
@@ -142,9 +142,8 @@
                         <div class="dropdown-content top-0 hidden z-10 -ml-4 mt-6 transform px-2 w-screen max-w-md sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
                             <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8">
-
-                                    <a href="/engineers.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
-                                        <!-- Heroicon name: outline/shield-check -->
+<!-- 
+                                    <a href="/products/e2e-encryption-sdks.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
                                         <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
                                         </svg>
@@ -153,12 +152,78 @@
                                                 SDKs
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                Your customers&#039; data will be safe and secure. Check out SDKs and hand on demo.
+                                                Open-Source E2E-Encryption SDKs
+                                            </p>
+                                        </div>
+                                    </a> -->
+
+<!-- 
+                                    <a href="/products/e2e-encryption-cli.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                                        </svg>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                CLI
+                                            </p>
+                                            <p class="mt-1 text-sm text-gray-500">
+                                                E2E-Encryption CLI
+                                            </p>
+                                        </div>
+                                    </a>
+
+
+
+                                    <a href="/products/e2e-encryption-s3.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                                        </svg>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                S3 Proxy
+                                            </p>
+                                            <p class="mt-1 text-sm text-gray-500">
+                                                E2E-Encryption S3 Proxy
+                                            </p>
+                                        </div>
+                                    </a>
+
+
+
+
+
+                                    <a href="/products/data-access-tracing.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                                        </svg>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                Data Access Tracer
+                                            </p>
+                                            <p class="mt-1 text-sm text-gray-500">
+                                                Wrap data with Peacemakr for full visibility into all data access requests and data flows
                                             </p>
                                         </div>
                                     </a>
 
                                     
+
+
+
+                                    <a href="/products/BYOK-customer-owned-keys.html" class="-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50">
+                                        <svg class="flex-shrink-0 h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                                        </svg>
+                                        <div class="ml-4">
+                                            <p class="text-base font-medium text-gray-900">
+                                                BYOK and Customer Owned Keys
+                                            </p>
+                                            <p class="mt-1 text-sm text-gray-500">
+                                                Bring your AWS KMS, HashiCorp Vault, Google KMS, or an HSM protected keys to Peacemakr
+                                            </p>
+                                        </div>
+                                    </a> -->
+
                                 </div>
                             </div>
                         </div>
