Code Review, done together, thx @D and @S

--- a/src/solutions/data-loss-prevention.html
+++ b/src/solutions/data-loss-prevention.html
@@ -112,7 +112,7 @@
               Active DLP detects unauthorized data access attempts, even outside your network.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-              Peacemakr wraps data with a security layer so that you konw when any system or user accesses it, even outside your VPC.
+              Peacemakr wraps data with a security layer for data access visibility, even outside your perimeter.
             </p>
           </div>
           <div class="lg:flex-1 items-center justify-center">
@@ -140,11 +140,11 @@
     <div class="relative max-w-7xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
       <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">What's broken with vanilla DLP?</h1>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Data loss prevention software is installed to identify and prevent business critical from is not lost, misused, or access by unauthorized users, in accordance to policies driven by HIPAA, PCI-DSS, or GDPR</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Data loss prevention software is installed to identify and prevent business critical data from being lost, misused, or accessed by unauthorized users.</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">These software packages scan, alert, and prevent accidental or malicious data sharing that violates the politices.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">These software packages scan, alert, and prevent accidental or malicious data sharing.</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">The problem is this approach is not data-centric, brittle, and reactionary to security incidences - instead of preventative and failsafe.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">The problem is that a process-centric approach is brittle and reactionary to security incidents - however, a data-centric security layer is both preventative and failsafe.</p>
       <br><br><br>
     </div>
   </div>
@@ -162,8 +162,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Isn't perimiter detection sufficient?</h3>
-          <p class="mt-4 text-base text-gray-500">No. Depending on networking rules and other security layers to ensure all data is piped through a DLP choke point is brittle and not failsafe.</p>
+          <h3 class="text-xl font-medium text-gray-900">Isn't perimeter detection sufficient?</h3>
+          <p class="mt-4 text-base text-gray-500">No. Depending on networking rules and other security layers to ensure all data flows through a DLP choke point is brittle and not failsafe.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="https://www.egress.com/en-us/blog/dlp-has-failed-you" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -179,7 +179,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Shouldn't loss detection be done on cleartext data?</h3>
-          <p class="mt-4 text-base text-gray-500">No. Tagging and labeling of data to enforece DLP policies must be done on cleartext data, but you should protect all sensitive data with encryption immediately and enforce DLP on encrypted data using its labels.</p>
+          <p class="mt-4 text-base text-gray-500">No. Only tagging and labeling of data to enforece DLP policies must be done on cleartext data. We should protect all sensitive data with encryption immediately and enforce DLP on ciphertext using its labels and tags.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="https://betterprogramming.pub/6-questions-to-ask-before-encrypting-application-layer-data-3b9419bd5d1d" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -229,7 +229,7 @@
       Active DLP detects unauthorized access attempts, everywhere
     </p>
     <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-      When unauthorized parties attempt to decrypt Peacemakr protected ciphertexts, the original data owner is alerted of the data exfiltation and unauthorized decryption attempt - even when the unauthorized access attempt is outside the VPC.
+      When unauthorized parties attempt to decrypt protected ciphertexts, the original data owner is alerted of the data exfiltation and unauthorized decryption attempt - even when the unauthorized access attempt is outside the perimeter.
     </p>
     
   </div>
