--- a/src/solutions/digital-supply-chain-data-protection.html
+++ b/src/solutions/digital-supply-chain-data-protection.html
@@ -144,7 +144,7 @@
 
       <p class="mt-6 max-w-3xl text-xl text-gray-300">Then, we prioritize fixes according the committed Service License Agreements of Vulnerability Remediations.</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">However, the only way to ensure you know that what you're about to run in production was blessed by your SSDLC processes, is to sign the digital asset upon certification and verify the signature before running in production.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">However, signing and verifing digital assets that are blessed by your SSDLC is the only way ensure integrity.</p>
       <br><br><br>
     </div>
   </div>
