--- a/src/solutions/healthcare-data-protection.html
+++ b/src/solutions/healthcare-data-protection.html
@@ -127,16 +127,12 @@
     </div>
     <div class="relative max-w-7xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
       <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">What are HIPAA's Information Protection Requriements?</h1>
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">The HIPAA statute consists of several regulations, including the Privacy, Security, and Breach Notification Rules. In addition to these Rules, organizations need to pay attention to recent enforcement actions and case law to understand today's HIPAA information protection requirements.</p>
-
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Any information disclosures that are not explicitly consented to in writing by a valid HIPAA-compliant authorization form are inappropriate disclosures.</p>
-
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Even unintended or accidental Protected Health Information (PHI) disclosures may result in Enforcement Action.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Any information disclosures that contain identifiable patient data and are not explicitly consented to in writing, are inappropriate disclosures.</p>
 
       <p class="mt-6 max-w-3xl text-xl text-gray-300">Intentions are irrelevant to PHI disclosures. All disclosure actions (intended or not) must abide by HIPAA Privacy Rule requirements.</p>
       <br><br><br>
 
-      <h1 class="text-2xl font-extrabold tracking-tight text-white">HIPAA Information Protection requirements require us to prvent data breanches.</h1>
+      <h1 class="text-2xl font-extrabold tracking-tight text-white">Simply put, HIPAA requires us to prevent data breaches.</h1>
     </div>
   </div>
 
@@ -154,7 +150,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is TLS Sufficient?</h3>
-          <p class="mt-4 text-base text-gray-500">No. TLS only provides data privacy as data moves between systems. It does not protect your data when an adversary is inside your system.</p>
+          <p class="mt-4 text-base text-gray-500">No. TLS only provides data privacy as data moves between systems. It does not prevent data breaches when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="/blog/ciso-guide-to-hipaa-encryption.html" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -170,7 +166,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-medium text-gray-900">Is Encryption-at-Rest Sufficient?</h3>
-          <p class="mt-4 text-base text-gray-500">No. Encryption-at-Rest only protect your data on physical storage media. It does not protect your data when an adversary is inside your system.</p>
+          <p class="mt-4 text-base text-gray-500">No. Encryption-at-Rest only protects your data on physical storage. It does not prevent data breaches when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="/blog/ciso-guide-to-hipaa-encryption.html" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
