--- a/src/solutions/iot-data-protection.html
+++ b/src/solutions/iot-data-protection.html
@@ -100,7 +100,7 @@
               IoT devices need data protection, too.
             </h2>
             <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-              Peaceamkr works on every IoT platform with minimalist performacne and battery life impacts.
+              Peaceamkr works on every IoT platform with minimal performacne and battery life impacts.
             </p>
           </div>
           <div class="lg:flex-1 items-center justify-center">
@@ -129,7 +129,7 @@
       <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">Why is IoT Data Security Difficult?</h1>
       <p class="mt-6 max-w-3xl text-xl text-gray-300">TLS and Encryption-at-Rest are necessary data security tools, but they do not stop an adversary that breaks into your system from stealing data.</p>
 
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Further, IoT platforms themselves are extremely resource constrained, and required optimized code, compilers, and minimal libraries - a very difficult combination for encryption libraries.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Further, IoT platforms themselves are extremely resource constrained and require optimized code, compilers, and minimal libraries - a very difficult combination for encryption libraries.</p>
     </div>
   </div>
 
@@ -145,8 +145,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Is TLS Broken?</h3>
-          <p class="mt-4 text-base text-gray-500">TLS only provides data privacy as data moves between systems. It does not protect your data when an adversary is inside your system.</p>
+          <h3 class="text-xl font-medium text-gray-900">Is TLS Sufficient?</h3>
+          <p class="mt-4 text-base text-gray-500">No. TLS only provides data privacy as data moves between systems. It does not protect your data when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="https://calendly.com/peacemakr" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -161,8 +161,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
           </div>
-          <h3 class="text-xl font-medium text-gray-900">Is Encryption-at-Rest Broken?</h3>
-          <p class="mt-4 text-base text-gray-500">Encryption-at-Rest only protect your data on physical storage media. It does not protect your data when an adversary is inside your system.</p>
+          <h3 class="text-xl font-medium text-gray-900">Is Encryption-at-Rest Sufficient?</h3>
+          <p class="mt-4 text-base text-gray-500">No. Encryption-at-Rest only protect your data on physical storage. It does not protect your data when an adversary is inside your system.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-bl-2xl rounded-br-2xl md:px-8">
           <a href="https://calendly.com/peacemakr" class="text-base font-medium text-indigo-700 hover:text-indigo-600">Learn more<span aria-hidden="true"> &rarr;</span></a>
@@ -177,7 +177,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="md:text-center">
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-6xl">
-        E2E-Encryption Protects IoT Devices
+        E2E-Encryption Protects IoT Data
       </p>
       <div class="flex md:justify-center">
         <div class="mt-4 max-w-2xl md:text-left tracking-tight md:text-center text-lg text-gray-500"> 
@@ -208,7 +208,7 @@
         And we’re here to help
       </p>
       <p class="mt-3 text-lg text-gray-300">
-        Peacemakr is an IoT-ready E2E-Encryption solution, but it may not be obvious how it applies to your device. We'd love an opportunity to learn more about your business and work with you on how you might turn your data protection challenges into solutions, quickly.
+        Peacemakr is an IoT-ready E2E-Encryption solution, but it may not be obvious how it applies to your device. We'd love an opportunity to work with you towards a data protection solution.
       </p>
       <div class="mt-8">
         <div class="inline-flex rounded-md shadow">
