--- a/src/products/data-access-tracing.html
+++ b/src/products/data-access-tracing.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Peacemakr | engineers</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="shortcut icon" href="/images/peacemakr.ico" type="image/x-icon"/>
     <meta property="og:title" content="Peacemakr"/>
     <meta property="og:description"
           content="Data Security simplified."/>
@@ -20,7 +20,7 @@
     <meta name="twitter:title" content="Peacemakr"/>
     <meta name="twitter:description"
           content="Data Security simplified."/>
-    <script src="navbar.js" type="text/javascript"></script>
+    <script src="/navbar.js" type="text/javascript"></script>
 
     @@include('../navigation_styling.html')
 
@@ -122,7 +122,7 @@
       </div>
       <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1 rounded-xl">
         <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full rounded-xl">
-          <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="./images/github.png" alt="Customer profile user interface">
+          <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="/images/github.png" alt="Customer profile user interface">
         </div>
       </div>
     </div>
@@ -227,7 +227,7 @@
       </p> -->
     </div>
     <div class="mt-12 justify-center">
-      <img class="rounded-lg shadow-xl ring-1 ring-black ring-opacity-5 mx-auto" src="./images/peacemakr-slack.png" alt="Peacemakr Slack Channel">
+      <img class="rounded-lg shadow-xl ring-1 ring-black ring-opacity-5 mx-auto" src="/images/peacemakr-slack.png" alt="Peacemakr Slack Channel">
     </div>
   </div>
 </div>
@@ -903,7 +903,7 @@
     </div>
 </footer>
 
-<script src="index.js"></script>
+<script src="/index.js"></script>
 </body>
 
 </html>
