--- a/src/navigation.html
+++ b/src/navigation.html
@@ -201,7 +201,7 @@
                                                 Data Access Tracer
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                Wrap data with Peacemakr for full visibility into all data access requests and data flows
+                                                Full visibility of all data access requests and data flows
                                             </p>
                                         </div>
                                     </a>
@@ -219,7 +219,7 @@
                                                 BYOK and Customer Owned Keys
                                             </p>
                                             <p class="mt-1 text-sm text-gray-500">
-                                                Bring your AWS KMS, HashiCorp Vault, Google KMS, or an HSM protected keys to Peacemakr
+                                                Connect AWS KMS, HashiCorp Vault, Google KMS, or an HSM to Peacemakr
                                             </p>
                                         </div>
                                     </a>
