Towards new product pages

--- a/src/products/e2e-encryption-cli.html
+++ b/src/products/e2e-encryption-cli.html
@@ -72,8 +72,8 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">Open-Source SDKs<br></span>
-                        <span class="block text-indigo-600 xl:inline">One Simple Interface
+                        <span class="block xl:inline">E2E-Encryption<br></span>
+                        <span class="block text-indigo-600 xl:inline">as-a-CLI
 
 </span>
                     </h1>
@@ -92,42 +92,6 @@
 
 
 <main>
-
-
-      <!-- Featueres -->
-<div class="relative bg-white pt-16 pb-32 overflow-hidden">
-  <div class="mt-0">
-    <div class="lg:mx-auto lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
-      <div class="px-4 max-w-xl mx-auto sm:px-6 lg:py-32 lg:max-w-none lg:mx-0 lg:px-0 lg:col-start-2">
-        <div>
-          <div class="mt-6">
-            <h2 class="text-4xl font-extrabold tracking-tight text-gray-900">
-              Open-Source E2E-Encryption
-            </h2>
-            <p class="mt-4 text-lg text-gray-500">
-              Peacemakr's Open-Source E2E-Encryption SDKs raise the security bar and eliminates the barrier to entry. Join the movement and quickly simplify your data security with open-source SDKs, E2E-Encryption service, and automated key lifecycle management.
-
-              <br><br>
-
-              Encrypt data today, without worrying about backward compatability, cross platform portability, or changing security requirements.
-
-            </p>
-            <div class="mt-8 text-center">
-              <a href="https://github.com/peacemakr-io" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
-                See SDKs on GitHub
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="mt-12 sm:mt-16 lg:mt-0 lg:col-start-1 rounded-xl">
-        <div class="pr-4 -ml-48 sm:pr-6 md:-ml-16 lg:px-0 lg:m-0 lg:relative lg:h-full rounded-xl">
-          <img class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none" src="/images/github.png" alt="Customer profile user interface">
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
     <!-- CALL TO ACTION -->
