--- a/src/solutions/healthcare-data-protection.html
+++ b/src/solutions/healthcare-data-protection.html
@@ -105,7 +105,7 @@
           </div>
           <div class="lg:flex-1 items-center justify-center">
             <a href="https://calendly.com/peacemakr" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white mt-0 ml-3 w-auto flex-shrink-0">
-              Schedule 30-minutes a HIPAA Expert
+              Schedule 30-minutes with a HIPAA Expert
             </a>
           </div>
         </div>
