--- a/src/solutions/healthcare-data-protection.html
+++ b/src/solutions/healthcare-data-protection.html
@@ -127,7 +127,7 @@
     </div>
     <div class="relative max-w-7xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:px-8">
       <h1 class="text-4xl font-extrabold tracking-tight text-white md:text-5xl lg:text-6xl">What are HIPAA's Information Protection Requriements?</h1>
-      <p class="mt-6 max-w-3xl text-xl text-gray-300">Any information disclosures that contain identifiable patient data and are not explicitly consented to in writing, are inappropriate disclosures.</p>
+      <p class="mt-6 max-w-3xl text-xl text-gray-300">Any disclosures that fall outside of healthcare treatment, payments, operations and the provisioning of healthcare that are not explicitly consented to in writing would be inappropriate disclosures.</p>
 
       <p class="mt-6 max-w-3xl text-xl text-gray-300">Intentions are irrelevant to PHI disclosures. All disclosure actions (intended or not) must abide by HIPAA Privacy Rule requirements.</p>
       <br><br><br>
