A few correctiosn from new contacts

--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -239,7 +239,7 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>A client is anything software that integrates with an SDK. Once a key is derived, it's encrypted with the client's public asymmetric key and delivered to that specifically authorized client. Not even Peacemakr can snoop on that key material. For the most robust zero-trust threat model, you'd need to whitelist your trusted Certificate Authority and issue your clients and Key Derivers an X.509 certificate (yes, we have an API for that).</p>
+                                    <p>A client is any software that integrates with an SDK. Once a key is derived, it's encrypted with the client's public asymmetric key and delivered to that specifically authorized client. Not even Peacemakr can snoop on that key material. For the most robust zero-trust threat model, you'd need to whitelist your trusted Certificate Authority and issue your clients and Key Derivers an X.509 certificate (yes, we have an API for that).</p>
                                 </div>
                             </dt>
                         </div>
@@ -316,7 +316,7 @@
                                 </button>
                                 <div class="panel text-gray-500">
                                     <p> Peacemakr's network provides the basis for secure collaboration.</p>
-                                    <p>At Peacemakr, we divide our customers into Organizations. Your account belongs to an Organization that defines an authorization scope for your keys. You can share some of the keys in your Organization with any Organization in the Peacemakr network. Even when you authorized a collaborator, you control your keys and security policies, even in someone else's system. End a collaboration at any time, and their access to your keys.</p>
+                                    <p>At Peacemakr, we divide our customers into Organizations. Your account belongs to an Organization that defines an authorization scope for your keys. You can share some of the keys in your Organization with any Organization in the Peacemakr network. Even when you authorized a collaborator, you control your keys and security policies, even in someone else's system. You can end a collaboration at any time, and their access to your keys.</p>
                                 </div>
                             </dt>
                         </div>
@@ -345,7 +345,7 @@
                                 <!-- Expand/collapse question button -->
                                 <button aria-controls="faq" aria-expanded="false" class="accordion text-left w-full flex justify-between items-start text-gray-400" type="button">
                                     <span class="font-medium text-gray-900">
-                                        What's the difference between Hasicorp's Vault and Peaceamkr?
+                                        What's the difference between Hashicorp's Vault and Peaceamkr?
                                     </span>
                                     <span class="ml-6 h-7 flex items-center">
                                         <svg aria-hidden="true" class="rotate-0 h-6 w-6 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
