Added scroll bar for the code block section. Added a bunch of dirs to the ignore list.

--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,8 @@
                     </h2>
                 </div>
                 <div class="p-4 rounded-lg bg-gray-700 lg:col-span-2">
-                      <span class="rounded-sm font-mono text-indigo-100">
+                  <!-- overflow-x-auto allow to scroll on x axis when the screen is small -->
+                      <span class="block overflow-x-auto rounded-sm font-mono text-indigo-100">
                         # Install peacemakr
                         <br>
                         brew tap peacemakr-io/peacemakr 
